Fixed horizontal alignments of single headings

--- a/www/wp-content/themes/romaricpascal.is/scss/headings/_greeting.scss
+++ b/www/wp-content/themes/romaricpascal.is/scss/headings/_greeting.scss
@@ -1,6 +1,8 @@
 .rp-LetteredHeading-greeting {
     // Ensure it fits in the viewport
 	max-width: 50vh;
+    margin-left: auto;
+    margin-right: auto;
     width: 90%;
 }
 
