--- a/www/wp-content/themes/romaricpascal.is/scss/headings/thanks.css
+++ b/www/wp-content/themes/romaricpascal.is/scss/headings/thanks.css
@@ -1,6 +1,8 @@
 .rp-LetteredHeading-thanks {
     width: 80vw;
     max-width: 30em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .rp-LetteredHeading-thanks::before {
